--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ sal_all_syntenicortho.csv
 *.txt
 pangenepropnyloss.pdf
 syntenic_orthos_all.csv
+hap1sal_nohap2_syn.csv
+syntenic_orthos_all_synonly.csv
