trying to integrate bash script for blast but i think ill have to do that on the server. committing before i git fork

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,27 @@ syntenic_orthos_all.csv
 hap1sal_nohap2_syn.csv
 syntenic_orthos_all_synonly.csv
 syntenic_orthos_sal.csv
+hap2transcripts.nto
+hap2transcripts.ntf
+hap2transcripts.nsq
+hap2transcripts.not
+hap2transcripts.njs
+hap2transcripts.nin
+hap2transcripts.nhr
+hap2transcripts.ndb
+NChap2_final.all.maker.transcripts.fasta.nto
+NChap2_final.all.maker.transcripts.fasta.ntf
+NChap2_final.all.maker.transcripts.fasta.nsq
+NChap2_final.all.maker.transcripts.fasta.not
+NChap2_final.all.maker.transcripts.fasta.njs
+NChap2_final.all.maker.transcripts.fasta.nin
+NChap2_final.all.maker.transcripts.fasta.nhr
+NChap2_final.all.maker.transcripts.fasta.ndb
+NChap2_final.all.maker.transcripts.fasta
+NChap1_final.all.maker.transcripts.fasta
+NChap1_final.all.maker.transcripts.out.fasta
+hap1_sequences.fa
+NChap1_final.all.maker.transcripts.fasta.fai
+NChap1.out.fasta.fai
+NChap1.out.fasta
+ NChap1_final.all.maker.transcripts.out.fasta
