--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ NChap1_final.all.maker.transcripts.fasta.fai
 NChap1.out.fasta.fai
 NChap1.out.fasta
  NChap1_final.all.maker.transcripts.out.fasta
+test
