--- a/.gitignore
+++ b/.gitignore
@@ -11,15 +11,15 @@ syntenic_orthos_all.csv
 hap1sal_nohap2_syn.csv
 syntenic_orthos_all_synonly.csv
 syntenic_orthos_sal.csv
-*.nto
-*.ntf
-*.nsq
-*.not
-*.njs
-*.nin
-*.nhr
-*.ndb
-*.nto
+**/*.nto
+**/*.ntf
+**/*.nsq
+**/*.not
+**/*.njs
+**/*.nin
+**/*.nhr
+**/*.ndb
+**/*.nto
 NChap2_final.all.maker.transcripts.fasta
 NChap1_final.all.maker.transcripts.fasta
 NChap1_final.all.maker.transcripts.out.fasta
